Update Settings “general”

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ description: "Hi, I'm Geronimo Villaveces, a second year student in Oxfrod
   is with uni life. "
 header_text: "What options do uni students have for Hobbies? "
 footer_text: "Copyright 2020 Geronimo Villaveces Schenk "
-header_feature_image: ../uploads/sthaaaaaaaa.webp
+header_feature_image: ../uploads/stha.jpg
 bannerheight: 20vmax
 logo: ../uploads/49993860_561514860988941_4833417294469051420_n.jpg
 favicon: /uploads/favicon.ico
