--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,7 +3,7 @@ description: "Hi, I'm Geronimo Villaveces, a second year student in Oxfrod
   Brookes. I made this website to show students their different options when
   looking for a hobby. I will do my best to show the costs and how compatible it
   is with uni life. "
-header_text: "What options do uni students have for Hobbies? "
+header_text: "What Options Do University Students Have For Hobbies? "
 footer_text: "Copyright 2020 Geronimo Villaveces Schenk "
 header_feature_image: ../uploads/background-2.webp
 bannerheight: 20vmax
