--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,13 +1,13 @@
-backend:
+ybackend:
   name: github
-  repo: Geronimov/STHobbies # Path to your GitHub repository
+  repo: Geronimov/EnergyTypography # Path to your GitHub repository
   branch: master # Branch to update (master by default)
-  site_domain: student-hobbies.netlify.app #Your site on netlify
+  site_domain: energy-typography.netlify.app #Your site on netlify
   use_graphql: true
 
 publish_mode: editorial_workflow
 show_preview_links: true
-display_url: https://student-hobbies.netlify.app
+display_url: https://energy-typography.netlify.app
 logo_url: https://student-hobbies.netlify.app/uploads/logo.jpg
 
 # Do NOT edit below this line
